# visual-odometry

./: CMakeLists.txt  README.md
datasets/rgbd_dataset_freiburg1_xyz/: depth.txt
src/: main.cpp
src/acquisition/: TUMDatasetImageAcquisition.cpp
src/anms/: anms.cpp
src/descriptors/: ORBDescriptorGenerator.cpp
src/detection/: FASTKeypointDetector.cpp  ORBKeypointDetector.cpp
src/homogenization/: ANMSHomogenizer.cpp
src/matching/: BruteForceMatcher.cpp  FLANNMatcher.cpp  RatioTestFLANNMatcher.cpp
src/outlier_rejection/: DistanceOutlierRejection.cpp  RANSACOutlierRejection.cpp
src/pose_estimation/: PNPoseEstimation.cpp
src/pose_integration/: BasicPoseIntegration.cpp  PoseGraphOptimization.cpp
src/preprocessing/: GrayscalePreprocessor.cpp  HistogramEqualizationPreprocessor.cpp
src/trajectory/: TrajectoryEstimator.h
src/trajectory_evaluation/: ATEEvaluation.cpp  RPEEvaluation.cpp  TrajectoryEvaluator.cpp
test/: CMakeLists.txt  test_acquisition.cpp
